tests/NormalTests/paczka1/small_fuzzy/96457891.err
Error in line 12: YcWw A11 63,71
Error in line 10: YcWw A11 18,6
